# water_quality_analysis

./: .gitignore  README.md  gui.py  model.ipynb  pyproject.toml
model/: model.ipynb  water_potability_predictor.pkl
